qmsystem2 (1.0.1) unstable; urgency=low

   [Matias Muhonen]
   * Fix warnings from the static analysis tool

 -- Matias Muhonen <ext-matias.muhonen@nokia.com>  Mon, 20 Dec 2010 12:19:41 +0200

qmsystem2 (1.0.0) unstable; urgency=low

   [Matias Muhonen]
   * Fix missing return in QmKeysPrivate::getKeyState

   [Tapio Rantala]
   * Releasing for MeeGo

 -- Matias Muhonen <ext-matias.muhonen@nokia.com>  Mon, 20 Dec 2010 09:42:40 +0200

qmsystem2 (0.0.11) unstable; urgency=low

   [Matias Muhonen]
   * Made devicelock dependency optional
   * Made usb-moded-dev dependency optional
   * Made sysinfo dependency optional
   * Use pkgconfig with qmake
   * Make bmeipc dependency optional
   * Fix a deprecated location for posedata.h in QmOrientation
   * Made mce dependency optional
   * Test each cabc mode separately
   * Fix cabc test
   * Fixes: NB#211192 - QmLocks makes blocking dbus calls
   * Remove sysfs-watcher
   * Rename qmipcinterface.h => qmipcinterface_p.h

   [Tapio Rantala]
   * Proper package config file format

 -- Matias Muhonen <ext-matias.muhonen@nokia.com>  Wed, 08 Dec 2010 08:55:43 +0200

qmsystem2 (0.0.10) unstable; urgency=low

  [Yang Yang]
  * Add time constraint for manual-usb-test:QmUSBMode::setMode()
  * Add check QmTime::setTimezone() if empty string, returns false without asking timed
  * Remove tests for deprecated functions in time-test, fix setTimezone test

  [Matias Muhonen]
  * Add manual-batterymon-test
  * Rename msystemdbus.h => msystemdbus_p.h and remove unused D-Bus interface declarations

  [Raimo Vuonnala]
  * Removed qmusbmode from Nokia Meego scope

  [Ilya Dogolazky]
  * Removed ':' before the time zone names

 -- Raimo Vuonnala <raimo.vuonnala@nokia.com>  Fri, 03 Dec 2010 08:46:08 +0200

qmsystem2 (0.0.9) unstable; urgency=low

  [Yang Yang]
  * Add test error signal of qmusbmoded, open usbmod-test

  [Matias Muhonen]
  * Fixes: NB#207792 - MeeGo::QmUSBMode::setMode() may block for several seconds
