@@ -2,8 +2,9 @@ qmsystem2 (1.0.1) unstable; urgency=low
 
    [Matias Muhonen]
    * Fix warnings from the static analysis tool
+   * Optimize QmIPCInterface performance by using QDBusAbstractInterface instead of QDBusInterface
 
- -- Matias Muhonen <ext-matias.muhonen@nokia.com>  Mon, 20 Dec 2010 12:19:41 +0200
+ -- Matias Muhonen <ext-matias.muhonen@nokia.com>  Thu, 23 Dec 2010 12:23:17 +0200
 
 qmsystem2 (1.0.0) unstable; urgency=low
 
